--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220906151156">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221006162915">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@400;700&display=swap&_v=20220906151156" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@400;700&display=swap&_v=20221006162915" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -77,8 +77,8 @@
 					<div class="about__flex-item about__flex-item--2">
 						<div data-da=".about__flex-item--2 , 768 , 2" class="about__img"><picture><source srcset="img/bg/aboutBg2.webp" type="image/webp"><img src="img/bg/aboutBg2.png" img></picture></div>
 						<div class="about__content">
-							<h2 class="about__title">ConsectUltricies</h2>
-							<div class="about__subtitle">
+							<h2 class="about__title title">ConsectUltricies</h2>
+							<div class="about__subtitle subtitle">
 								Amet Ipsum
 							</div>
 							<div class="about__descr">
@@ -104,13 +104,188 @@
 				</div>
 
 			</section>
+			<section class="services">
+				<div class="services__flex-container">
+
+					<div class="services__item">
+						<picture><source srcset="img/icons/services1.webp" type="image/webp"><img src="img/icons/services1.png" class="services__item-icon" img></picture>
+						<div class="services__item-name">Activity Notifications</div>
+						<div class="services__item-text">
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius
+							enim in eros elementum tristique.
+						</div>
+					</div>
+
+					<div class="services__item">
+						<picture><source srcset="img/icons/services2.webp" type="image/webp"><img src="img/icons/services2.png" class="services__item-icon" img></picture>
+						<div class="services__item-name">Custom Timing</div>
+						<div class="services__item-text">
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius
+							enim in eros elementum tristique.
+						</div>
+					</div>
+
+					<div class="services__item">
+						<picture><source srcset="img/icons/services3.webp" type="image/webp"><img src="img/icons/services3.png" class="services__item-icon" img></picture>
+						<div class="services__item-name">Mobile Optimized</div>
+						<div class="services__item-text">
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius
+							enim in eros elementum tristique.
+						</div>
+
+					</div>
+
+				</div>
+
+			</section>
+			<section class="statistics">
+
+				<div class="statistics__flex-container">
+
+					<div class="statistics__item">
+						<div class="statistics__item-count">+12k</div>
+						<div class="statistics__item-name">Nibh Elit Tristique</div>
+					</div>
+
+					<div class="statistics__item">
+						<div class="statistics__item-count">84</div>
+						<div class="statistics__item-name">Aenean Condimentum</div>
+					</div>
+
+					<div class="statistics__item">
+						<div class="statistics__item-count">3,07</div>
+						<div class="statistics__item-name">Quam Inceptos</div>
+					</div>
+
+					<div class="statistics__item">
+						<div class="statistics__item-count">24h</div>
+						<div class="statistics__item-name">Ullamcorper</div>
+					</div>
+
+				</div>
+
+			</section>
+			<section class="food">
+				<div class="food__flex-container">
+
+					<div class="food__flex-item">
+						<div class="food__content">
+							<h2 class="food__title title">Aenean Consectetur Porta</h2>
+							<div class="food__subtitle subtitle">
+								Sem Risus Elit Vestibulum
+							</div>
+							<div class="food__descr descr">
+								Nulla vitae elit libero, a pharetra augue. Duis mollis, est non commodo luctus, nisi erat porttitor
+								ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Donec id elit
+								non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod.
+							</div>
+						</div>
+						<div class="food__img"><picture><source srcset="img/bg/foodBg1.webp" type="image/webp"><img src="img/bg/foodBg1.png" img></picture></div>
+					</div>
+
+					<div class="food__flex-item food__flex-item--revers">
+						<div class="food__content">
+							<h2 class="food__title title">Aenean Consectetur Porta</h2>
+							<div class="food__subtitle subtitle">
+								Parturient Tortor
+							</div>
+							<div class="food__descr descr">
+								Nulla vitae elit libero, a pharetra augue. Duis mollis, est non commodo luctus, nisi erat porttitor
+								ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Donec id elit
+								non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod.
+							</div>
+						</div>
+						<div class="food__img"><picture><source srcset="img/bg/foodBg2.webp" type="image/webp"><img src="img/bg/foodBg2.png" img></picture></div>
+					</div>
+
+				</div>
+
+			</section>
+			<section class="partners">
+				<div class="partners__comments">
+					HeadNulla vitae elit libero, a pharetra augue. Duis mollis, est non commodo luctus, nisi erat porttitor ligula,
+					eget lacinia odio sem nec elit. Pus sit amet fermentum. Donec id elit non mi porta gravida at eget metus. Etiam
+					porta sem malesuada magna mollis euismod.ing
+				</div>
+				<div class="partners__logo">
+					<picture><source srcset="img/bg/partnersBg.webp" type="image/webp"><img src="img/bg/partnersBg.png" alt="Наши партнеры"></picture>
+				</div>
+			</section>
+			<section class="started">
+
+				<!-- ?container -->
+				<div class="started__container">
+
+					<h2 class="started__title">Ready to get started?</h2>
+
+					<!-- ?btns -->
+					<div class="started__btns">
+						<button class="started__bit started__bit--pip">Download Now</button>
+						<button class="started__bit">Get in Touch</button>
+					</div>
+
+				</div>
+			</section>
+			<section class="update">
+
+				<!-- ?container -->
+				<div class="update__container">
+
+					<h2 class="update__title">Get updates from Richard</h2>
+					<div class="update__subtitle">New course alerts, discounts and free lessons</div>
+
+					<!-- ?form -->
+					<form id="form" class="update__form">
+						<input class="update__input" placeholder="Enter your email"></input>
+						<button type="submit" class="update__btn">Subscribe</button>
+					</form>
+
+				</div>
+				<div class="mail-info">
+					Ваша заявка была оформлена!!!
+					Ожидайте обратной связи.
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
+				<div class="footer__logo">
+					<picture><source srcset="img/icons/footer-logo.webp" type="image/webp"><img src="img/icons/footer-logo.png" alt=""></picture>
+				</div>
+				<nav class="footer__menu footer-menu">
+
+					<ul class="footer-menu__list">
+
+						<li class="footer-menu__item">
+							<a href="#" class="footer-menu__link">Email</a>
+						</li>
+
+						<li class="footer-menu__item">
+							<a href="#" class="footer-menu__link">Instagram</a>
+						</li>
+
+						<li class="footer-menu__item">
+							<a href="#" class="footer-menu__link">Facebook</a>
+						</li>
+
+						<li class="footer-menu__item">
+							<a href="#" class="footer-menu__link">Twitter</a>
+						</li>
+
+						<li class="footer-menu__item">
+							<a href="#" class="footer-menu__link">Image License Info</a>
+						</li>
+
+						<li class="footer-menu__item">
+							<a href="#" class="footer-menu__link">Powered by Webflow</a>
+						</li>
+					</ul>
+				</nav>
+
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20220906151156"></script>
+	<script src="js/app.min.js?_v=20221006162915"></script>
 </body>
 
 </html>
